<resources>
    <string name="app_name">Epicture</string>
    <string name="account_login">Account Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgotten your login details ?</string>
    <string name="sign_in">Log In</string>
    <string name="user_profile_photo">user_profile_photo</string>
    <string name="dialog_message">Really logout ?</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="really_logout">Really logout ?</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="image">Image</string>
    <string name="like_button_feed">like_button_feed</string>
    <string name="home_button_action_bar_main">home_button_action_bar_main</string>
    <string name="profil_button_action_bar_main">profil_button_action_bar_main </string>
    <string name="add_button_action_bar_main">add_button_action_bar_main</string>
    <string name="search_input">Search</string>
</resources>
