<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:layout_margin="20dp"
        android:id="@+id/logout_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/really_logout"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="26sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="10dp"
            android:id="@+id/logout_ok_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/OK"
            android:textAlignment="center"
            android:textColor="@color/red" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/logout_cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/dark_grey" />

    </LinearLayout>


</LinearLayout>