<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_header"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:layout_centerInParent="true"
    android:scaleType="centerCrop">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingTop="10dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="70sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_title"
        android:background="#ffffff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"

                android:background="@android:drawable/editbox_background"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/login_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:background="@null"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/editbox_background"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:background="@null"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/login_button"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/loading"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    android:translationZ="2dp"/>
            </RelativeLayout>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingTop="3dp"
                android:text="@string/forgot_password"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>