<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.michel.team.epicture.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relativeLayout" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar"
        android:background="#EEEEEE"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:id="@+id/back_button_action_bar_home_button"
            android:gravity="center"
            android:layout_width="@dimen/action_bar"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp" >
            <ImageView
                android:id="@+id/action_bar_home_button"
                android:layout_width="@dimen/action_bar_icons"
                android:layout_height="@dimen/action_bar_icons"
                android:background="@drawable/ic_action_home"
                android:contentDescription="@string/home_button_action_bar_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_centerVertical="true"
            android:id="@+id/back_button_action_bar_search_button"
            android:layout_width="@dimen/action_bar"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/back_button_action_bar_add_button"
            android:layout_toEndOf="@id/back_button_action_bar_home_button"
            android:gravity="center" >

            <ImageView
                android:id="@+id/action_bar_search_button"
                android:layout_width="@dimen/action_bar_icons"
                android:layout_height="@dimen/action_bar_icons"
                android:background="@drawable/ic_action_search"
                android:contentDescription="@string/home_button_action_bar_main" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/back_button_action_bar_add_button"
            android:gravity="center"
            android:layout_width="@dimen/action_bar"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent" >
            <ImageView
                android:id="@+id/action_bar_add_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_add_box"
                android:contentDescription="@string/add_button_action_bar_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_centerVertical="true"
            android:id="@+id/back_button_action_bar_favorite_button"
            android:layout_width="@dimen/action_bar"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/back_button_action_bar_user_profile_button"
            android:layout_toEndOf="@id/back_button_action_bar_add_button"
            android:gravity="center" >

            <ImageView
                android:id="@+id/action_bar_favorite_button"
                android:layout_width="@dimen/action_bar_icons"
                android:layout_height="@dimen/action_bar_icons"
                android:background="@drawable/ic_action_favorite_grey"
                android:contentDescription="@string/home_button_action_bar_main" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/back_button_action_bar_user_profile_button"
            android:gravity="center"
            android:layout_width="@dimen/action_bar"
            android:layout_alignParentEnd="true"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp" >
            <ImageView
                android:id="@+id/action_bar_user_profile_button"
                android:layout_width="@dimen/action_bar_icons"
                android:layout_height="@dimen/action_bar_icons"
                android:background="@drawable/ic_action_person"
                android:contentDescription="@string/profil_button_action_bar_main" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>